--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <h1 style="text-align: center;">بسم الله الرحمن الرحيم</h1>
         <br />
         <br />
-    <h3 style="text-align: center;">الطريق إلى البرمجة</h3>
-        <br />
+    <h3 style="text-align: center;">الطريق إلى البرمجة
+        <br />...</h3>
         <br />
     <div style="text-align: center;">
-    
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/240px-HTML5_logo_and_wordmark.svg.png" alt="صورة شعار إتش تي إم إل 5" />
-       
+
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/240px-HTML5_logo_and_wordmark.svg.png"
+                    alt="صورة شعار إتش تي إم إل 5" />
+
     </div>
 </body>
 </html>
